<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>me.will</groupId>
  <artifactId>springboot-leanr-parent</artifactId>
  <version>1.0</version>
  <packaging>pom</packaging>

  <!--<repositories>-->
  <!--  <repository>-->
  <!--    <id>ali-maven-public</id>-->
  <!--    <url>https://maven.aliyun.com/repository/public</url>-->
  <!--    <releases>-->
  <!--      <enabled>true</enabled>-->
  <!--    </releases>-->
  <!--    <snapshots>-->
  <!--      <enabled>true</enabled>-->
  <!--    </snapshots>-->
  <!--  </repository>-->
  <!--</repositories>-->
  <!--<pluginRepositories>-->
  <!--  <pluginRepository>-->
  <!--    <id>ali-maven-public</id>-->
  <!--    <url>https://maven.aliyun.com/repository/public</url>-->
  <!--    <releases>-->
  <!--      <enabled>true</enabled>-->
  <!--    </releases>-->
  <!--    <snapshots>-->
  <!--      <enabled>true</enabled>-->
  <!--    </snapshots>-->
  <!--  </pluginRepository>-->
  <!--</pluginRepositories>-->

  <properties>
    <!-- 主要依赖库的版本定义 -->
    <spring.version>2.6.6</spring.version>
    <tomcat.version>9.0.62</tomcat.version>
    <phoenix.version>1.0</phoenix.version>
    <groovy.version>3.0.10</groovy.version>
    <quartz.version>2.3.2</quartz.version>
    <mybatis.version>3.4.5</mybatis.version>
    <commons-collections.version>3.2.1</commons-collections.version>
    <jackson.version>2.13.2</jackson.version>
    <fastjson.version>1.2.83</fastjson.version>
    <org.codehaus.jackson.version>1.9.13</org.codehaus.jackson.version>
    <aspectj.version>1.9.7</aspectj.version>
    <jedis.version>3.7.1</jedis.version>
    <slf4j.version>1.7.36</slf4j.version>
    <logback.version>1.2.11</logback.version>
    <commons-lang3.version>3.11</commons-lang3.version>
    <guava.version>30.1-jre</guava.version>
    <junit.version>4.12</junit.version>
    <assertj.version>3.18.1</assertj.version>
    <mysql.version>8.0.28</mysql.version>
    <commons-io.version>2.6</commons-io.version>
    <joda-time.version>2.3</joda-time.version>
    <weixin-java.version>3.9.0</weixin-java.version>
    <gson.version>2.8.9</gson.version>
    <lombok.version>1.18.22</lombok.version>
    <poi.version>4.1.2</poi.version>
    <dom4j.version>2.1.3</dom4j.version>
    <hivemq.mqtt.version>1.2.2</hivemq.mqtt.version>
    <paho.version>1.2.5</paho.version>
    <baidu.aip.version>4.15.7</baidu.aip.version>
    <micrometer.version>1.8.4</micrometer.version>
    <prometheus.version>0.12.0</prometheus.version>
    <apollo.version>1.9.1</apollo.version>
    <kafka.version>3.1.0</kafka.version>
    <grpc.version>1.44.1</grpc.version>
    <protobuf.version>3.17.3</protobuf.version>
    <hutool.version>5.7.21</hutool.version>
    <cloudauth.version>1.0.7</cloudauth.version>
    <redisson.version>3.15.6</redisson.version>
    <opentelemetry-bom.version>1.14.0</opentelemetry-bom.version>
    <!-- Plugin的属性定义 -->
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <java.version>11</java.version>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>de.javakaffee</groupId>
        <artifactId>kryo-serializers</artifactId>
        <version>0.42</version>
      </dependency>
      <dependency>
        <groupId>com.esotericsoftware</groupId>
        <artifactId>kryo</artifactId>
        <version>4.0.2</version>
      </dependency>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${spring.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-test</artifactId>
        <version>${spring.version}</version>
        <type>pom</type>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.apache.tomcat.embed</groupId>
        <artifactId>tomcat-embed-core</artifactId>
        <version>${tomcat.version}</version>
      </dependency>
      <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>${lombok.version}</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>org.redisson</groupId>
        <artifactId>redisson-spring-boot-starter</artifactId>
        <version>${redisson.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.0</version>
          <configuration>
            <release>11</release>
            <source>${java.version}</source>
            <target>${java.version}</target>
            <showWarnings>true</showWarnings>
          </configuration>
        </plugin>

        <plugin>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-maven-plugin</artifactId>
          <version>${spring.version}</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.2.0</version>
          <executions>
            <execution>
              <goals>
                <goal>test-jar</goal>
              </goals>
              <configuration>
              </configuration>
            </execution>
          </executions>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.22.0</version>
          <configuration>
            <argLine>
              --illegal-access=permit
            </argLine>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-failsafe-plugin</artifactId>
          <version>2.22.2</version>
          <configuration>
            <argLine>
              --illegal-access=permit
            </argLine>
          </configuration>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>3.2.1</version>
          <executions>
            <execution>
              <id>attach-sources</id>
              <goals>
                <goal>jar</goal>
              </goals>
            </execution>
          </executions>
        </plugin>

        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>versions-maven-plugin</artifactId>
          <version>2.5</version>
          <configuration>
            <generateBackupPoms>false</generateBackupPoms>
          </configuration>
        </plugin>

        <!-- Enforce -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-enforcer-plugin</artifactId>
          <version>3.0.0</version>
          <configuration>
            <rules>
              <requireMavenVersion>
                <message>Unsupported Maven version, the minimum version is 3.0, please upgrade it.</message>
                <version>[3.0,)</version>
              </requireMavenVersion>
              <requireJavaVersion>
                <message>JDK 11 required, the minimum version of JDK is 11.0.9, please upgrade your JDK.</message>
                <version>[11.0.9,)</version>
              </requireJavaVersion>
            </rules>
          </configuration>
          <executions>
            <execution>
              <id>enforce-versions</id>
              <goals>
                <goal>enforce</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

</project>
